Fixed missaligned image on homescreen & finished all of eurpe

--- a/stylesheets/country.css
+++ b/stylesheets/country.css
@@ -22,7 +22,7 @@
 
 .bg-img{
     height: 100vh;
-    position:fixed;
+    position:absolute;
     opacity: 0.1;
     top: 0;
     z-index: -1;
